<resources>
    <string name="app_name">Homely</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="text_devices">Devices</string>
    <string name="text_routines">Routines</string>
    <string name="text_home">Home</string>
    <string name="text_favourite_devices">Favourite Devices</string>
    <string name="text_favourite_routines">Favourite Routines</string>
    <string name="action_settings">Settings</string>
    <string name="popup_menu_id">PopupMenu</string>
    <string name="device_name"> Devices</string>
    <string name="add_device"> Add Device</string>
    <string name="name"> Name </string>
    <string name="type">Type</string>
    <string name="add_routine">Add Routine</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="text_off">Off</string>
    <string name="text_on">On</string>
    <string name="tab_text_devices">Devices</string>
    <string name="notif_title">Homely: The smart home manager</string>
    <string name="notif_text">has been turned</string>


    <string-array name="types">
        <item>Lamp</item>
        <item>Door</item>
        <item>Ac</item>
        <item>Oven</item>
        <item>Refrigerator</item>
        <item>Timer</item>
        <item>Blind</item>
        <item>Alarm</item>
    </string-array>
    <string name="help_center">Help Center</string>
    <string name="need_help">Contact us</string>
    <string name="subject_title">Subject title</string>
    <string name="description">Description</string>
    <string name="notification_settings">Notification settings</string>
    <string name="help_title">Help</string>
    <string name="send_confirmation">Message sent</string>
    <string name="device_name_error"> Device name can\'t be empty </string>
    <string name="added_successfully"> Device added successfully </string>
    <string name="mark_favorite"> Mark as favorite </string>
    <string name="run">Run</string>
    <string name="routine">Routine</string>
    <string name="routine_added">Added a routine.</string>
    <string name="run_routine">Routine executed.</string>
    <string name="device">Device</string>
</resources>
