<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:id="@+id/device_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_weight="50"
        android:gravity="center_vertical"
        android:text="@string/device_name"
        android:textColor="@android:color/background_dark" />


    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_weight="50"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on" />


</LinearLayout>