<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageButton
                android:id="@+id/back_arrow"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_backwards"
                android:tint="@android:color/background_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ac_name"
                android:layout_width="382dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/help_center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/header" />

            <ImageButton
                android:id="@+id/send"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_send_white_24dp"
                android:tint="@android:color/background_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/need_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_help"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/subject"
                android:layout_width="417dp"
                android:layout_height="match_parent"
                android:hint="@string/subject_title"
                android:inputType="text"
                android:paddingTop="@dimen/name"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description"
                android:inputType="text"
                android:paddingTop="@dimen/name"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
