<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageButton
                    android:id="@+id/back_arrow"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_backwards"
                    android:tint="@android:color/background_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ac_name"
                    android:layout_width="382dp"
                    android:layout_height="55dp"
                    android:layout_weight="60"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/add_device"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/header" />

                <ImageButton
                    android:id="@+id/save"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_ok"
                    android:tint="@android:color/background_light" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:weightSum="100"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TableRow
                android:id="@+id/table_row_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:ems="10"
                    android:hint="@string/name"
                    android:paddingTop="@dimen/name"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="10">

                <LinearLayout
                    android:id="@+id/row2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/type_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/type"
                        android:textColor="@android:color/background_dark" />

                    <Spinner
                        android:id="@+id/type"
                        android:layout_width="188dp"
                        android:layout_height="match_parent"
                        android:layout_weight="20"
                        android:textAlignment="center" />

                </LinearLayout>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/favorite_space" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/name"
                    android:text="@string/mark_favorite"
                    android:textColor="@android:color/background_dark" />

                <ImageView
                    android:id="@+id/favButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/btn_star_big_on" />

            </TableRow>
        </TableLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />


</android.support.constraint.ConstraintLayout>